# graspit

./: Branches.txt  CMakeLists.txt  ChangesToOriginalSource.md  DebugChanges.md  Dockerfile  Dockerfile.indigo  INSTALL.MinGW.md  README.docker.md  README.markdown  package.xml
catkin_docker/: Dockerfile
cmake/: graspitConfig.cmake
dockerfile_catkin/: Dockerfile
include/: body.h  contact.h  debug.h  dof.h  ivmgr.h  ivmgr_abstract.h  ivmgr_nogui.h  joint.h  kinematicChain.h  robot.h  world.h  worldElement.h
include/EGPlanner/: PlanningParams.h  SimAnnParams.h  egPlanner.h  graspTesterThread.h  listPlanner.h  om_search.h  om_simAnn.h  search.h  simAnn.h  simAnn.h.bak  simAnnPlanner.h
src/: body.cpp  debug.cpp  graspitCore.cpp  graspitServer.cpp  ivmgr_nogui.cpp  mytools.cpp  robot.cpp  staticLibInitializer.hpp  world.cpp
src/Collision/: collisionStructures.h
src/EGPlanner/: PlanningParams.cpp  SimAnnParams.cpp  egPlanner.cpp  om_simAnn.cpp  om_simAnnPlanner.cpp  simAnn.cpp  simAnnPlanner.cpp
